# mot

./: Cargo.toml  README.md  build.rs  install.sh
.github/scripts/: package_deb.sh  update_homebrew_formula.py
.github/workflows/: release.yml
benches/: parsers.rs
src/: lib.rs  main.rs
