[package]
name = "mot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
rayon = "1.10.0"
ratatui = { version = "0.30.0", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["parsing"] }
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.20.0"

[[bench]]
name = "parsers"
harness = false
